# VenEngine

./: Cargo.toml  LICENSE  README.md  VenEngine.drawio  build.rs
core/: Cargo.toml
core/src/: lib.rs
sandbox/: Cargo.toml
sandbox/src/: main.rs
src/: Instance.rs  app.rs  application.rs  camera.rs  layers.rs  main.rs  model.rs  resources.rs  shader.wgsl  texture.rs  window.rs
src/conf/: application.yml
src/renderer/: context.rs  mod.rs  shader.wgsl
