[package]
name = "venengine"
version = "0.1.0"
edition = "2024"
readme = "README.md"
license-file = "LICENSE"
resolver = "2"
build = "build.rs"

[dependencies]
anyhow = "1.0.95"
bytemuck = { version = "1.21.0", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.11.6"
futures = { version = "0.3.31" }
log = "0.4.25"
tobj = { version = "4.0.3", default-features = false, features = ["async", "futures"] }
wgpu = "24.0"
winit = { version = "0.30", features = ["rwh_06"] }

[dependencies.image]
version = "0.25.5"
default-features = true
features = ["png", "jpeg"]

[build-dependencies]
anyhow = "1.0.95"
fs_extra = "1.3.0"
